fix: movement on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 h1,
 h2,
 h3,
